PR2: Ejercicio 3 display errores

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "types.h": "c",
         "unistd.h": "c",
         "semaphore.h": "c",
-        "getopt_core.h": "c"
+        "getopt_core.h": "c",
+        "pthread.h": "c"
     }
 }
