chat sin terminacion

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "unistd.h": "c",
         "semaphore.h": "c",
         "getopt_core.h": "c",
-        "pthread.h": "c"
+        "pthread.h": "c",
+        "err.h": "c"
     }
 }
