P2.1 - Otra vez reescrito

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -12,6 +12,13 @@ ENV LANG es_ES.UTF-8
 ENV LANGUAGE es_ES:es
 ENV LC_ALL es_ES.UTF-8
 
+# icpx
+RUN wget -O- https://apt.repos.intel.com/intel-gpg-keys/GPG-PUB-KEY-INTEL-SW-PRODUCTS.PUB \
+| gpg --dearmor | sudo tee /usr/share/keyrings/oneapi-archive-keyring.gpg > /dev/null
+RUN echo "deb [signed-by=/usr/share/keyrings/oneapi-archive-keyring.gpg] https://apt.repos.intel.com/oneapi all main" | sudo tee /etc/apt/sources.list.d/oneAPI.list
+RUN apt-get update
+RUN DEBIAN_FRONTEND=noninteractive apt-get install -y intel-basekit
+
 # USUARIO
 ## Pasword hash: mkpasswd -m sha512crypt
 RUN useradd -m usuarioso -p '$6$XwUTYzO/RnFcC8z0$Buha1JXlkbj2H0fkTLGQItXPWmtwA9qCrVIDIFakpEs2p4j0x6SdcZDTEh4u20kAFyFY14sf.vRuG44iEuKTm.' -s /bin/bash
