cnn 3.1 clasifica bien

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -4,7 +4,7 @@ RUN apt-get clean
 RUN apt-get update --fix-missing
 RUN apt-get update
 RUN DEBIAN_FRONTEND=noninteractive apt-get install -y locales sudo build-essential nano gcc make gdb glibc-doc git \
-					man bash-completion whois strace time wget curl vim emacs manpages-dev procps htop
+					man bash-completion whois strace time wget curl vim emacs manpages-dev procps htop libpng-dev
 
 # LOCALE
 RUN sed -i '/es_ES.UTF-8/s/^# //g' /etc/locale.gen && locale-gen
